# sparglim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  FUNDING.yml  LICENSE  README.md  RELEASE.md  config-template.md  config.md  generate-config.sh  generate_config_docs.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md  question.md
.github/workflows/: build-latest-images.yml  build_images.yml  build_latest_images.yml  docker-image.yml  docker-publish.yml  publish.yml  python-package.yml  python-publish.yml
dev/: Dockerfile.lab
dev/docker/: Dockerfile.jupyterlab-sparglim  Dockerfile.sparglim-server
dev/jupyter-sparglim-on-k8s/: Dockerfile.jupyterlab-sparglim  README.md
dev/jupyter-sparglim-on-k8s/k8s/: deployment.yaml
dev/jupyter-sparglim-sc/: README.md
dev/k8s/: headless-service.yaml  reload.sh
dev/pyspark-app/: Dockerfile.jupyterlab-sparglim  Dockerfile.lab
dev/pyspark-app/k8s/: deployment.yaml  lab-service.yaml
dev/sparglim-server/: Dockerfile.sparglim-server  README.md  reload.sh
dev/sparglim-server/k8s/: connect-server-service.yaml  deployment.yaml
docker/: Dockerfile.jupyterlab-sparglim  Dockerfile.lab  Dockerfile.sparglim-server  README.md
docs/: Makefile  conf.py  index.rst  make.bat  usage.rst
example/: Dockerfile.lab
example/dev/: Dockerfile.lab
example/dev/k8s/: deployment.yaml  reload.sh
example/jupyter-sparglim-sc/k8s/: deployment.yaml
example/k8s/: deployment.yaml
example/sparglim-server/k8s/: deployment.yaml
examples/jupyter-sparglim-on-k8s/: README.md
examples/jupyter-sparglim-on-k8s/k8s/: lab-service.yaml
examples/jupyter-sparglim-sc/: README.md
examples/scripts/: reload.sh
examples/sparglim-server/: README.md
examples/sparglim-server/k8s/: connect-server-service.yaml  deployment.yaml  headless-service.yaml
sparglim/: __init__.py  exceptions.py  log.py  utils.py
sparglim/config/: __init__.py  builder.py  configer.py  k8s.py
sparglim/server/: cli.py  daemon.py  tailer.py
sparglim/sql/: __init__.py  magic.py
tests/: conftest.py  test_builder.py  test_daemon.py  test_magic.py  test_server.py
tests/mock/: entrypoint.py  mock_spark_server.py
tests/mock/sbin/: entrypoint.py  mock_spark_server.py  start-connect-server.sh
(+5 files in other folders)
