[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sparglim"
description = "sparglim"
keywords = ["sparglim", "pyspark", "magic", "ipython", "spark"]
requires-python = ">=3.8"
dependencies = ["loguru", "click", "findspark", "psutil", "kubernetes"]
dynamic = ["version"]
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
[project.optional-dependencies]
pyspark = ["pyspark[pandas_on_spark,sql,connect]"]
magic = ["sparglim[pyspark]", "ipython"]

all = ["sparglim[pyspark]", "sparglim[magic]"]
test = ["sparglim[all]", "pytest", "pytest-cov", "pytype", "pytest-timeout"]

dev = ["sparglim[test]"]

[project.scripts]
sparglim-server = "sparglim.server.cli:cli"

[[project.authors]]
name = "wh1isper"
email = "9573586@qq.com"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD license"

[project.urls]
Source = "https://github.com/wh1isper/sparglim"

[tool.check-manifest]
ignore = [".*"]

[tool.hatch.version]
path = "sparglim/__init__.py"
